--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
             </div>
 
         </div>
-
+        
+<!-- // something -->
 
         <div class="right-part">
             <div class="popular-news">
